<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.arosbio.services</groupId>
	<artifactId>parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
        <module>service_utils</module>
		<module>cp_classification</module>
		<module>cp_regression</module>
		<module>vap_classification</module>
	</modules>


	<!-- Common properties -->
	<properties>
		<target-port>8080</target-port>
		<cpsign.version>2.0.0-rc1</cpsign.version>
		<swagger-core-version>2.2.8</swagger-core-version>
		<jetty-version>11.0.14</jetty-version>
		<jersey-version>3.1.1</jersey-version>
		<jackson-version>2.14.2</jackson-version>
		<junit-version>[4.13.1,)</junit-version>
		<logback-version>1.1.7</logback-version>
		<servlet-api-version>3.1.0</servlet-api-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.failsafe.version>3.0.0-M5</maven.failsafe.version>
		<maven.surefire.version>3.0.0-M5</maven.surefire.version>
		<application.vendor>Aros Bio AB</application.vendor>
		<maven.build.timestamp.format>yyyyMMdd_HHmmss</maven.build.timestamp.format>
		<mf.impl.vendor>Aros Bio AB</mf.impl.vendor>
        <maven.war.version>3.3.2</maven.war.version>
        <rest-assured.version>5.3.0</rest-assured.version> 
	</properties>

	<repositories>
		<repository>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<!-- Test deps -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured-all</artifactId>
			<version>${rest-assured.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-rules</artifactId>
			<version>1.19.0</version>
			<scope>test</scope>
			<!-- junit:junit-dep is deprecated, and junit:junit replaces it. -->
			<exclusions>
				<exclusion>
				  <groupId>junit</groupId>
				  <artifactId>junit-dep</artifactId>
				</exclusion>
			  </exclusions>
		</dependency>

		<!-- CPSIGN -->

		<dependency>
			<groupId>com.arosbio</groupId>
			<artifactId>cpsign-api</artifactId>
			<version>${cpsign.version}</version>
		</dependency>

		<!-- Requirements from Swagger-Core -->

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson-version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jakarta.rs</groupId>
			<artifactId>jackson-jakarta-rs-json-provider</artifactId>
			<version>${jackson-version}</version>
		</dependency>

		<!-- OpenAPI -->
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2-jakarta</artifactId>
			<version>${swagger-core-version}</version>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2-servlet-initializer-v2-jakarta</artifactId>
			<version>${swagger-core-version}</version>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations-jakarta</artifactId>
			<version>${swagger-core-version}</version>
		</dependency>


		<!-- Correct servlet API from the Jetty Sever we target -->
		<!-- TODO : is this needed ? -->
		
		<dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>5.0.0</version>
			<scope>provided</scope>
        </dependency>
		
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-jetty-servlet</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey-version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>${jersey-version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<!-- Test plugins -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
                <!-- make it possible to skip unit-tests -->
                <configuration>
                    <skip>${skipUnitTests}</skip>
					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>

			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty-version}</version>
				<configuration>
					<httpConnector>
						<port>${target-port}</port>
					</httpConnector>
					<stopKey>quit</stopKey>
					<stopPort>9000</stopPort>
				</configuration>
				<executions>
					<execution>
						<id>start-jetty</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>stop</goal><!-- Stop any running jetty instances -->
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>stop-jetty</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven.failsafe.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
